# LifeScience-agents-fork

clinical-research-synthesizer/: pyproject.toml
clinical-research-synthesizer/clinical_research_synthesizer/specialists/literature_researcher/tools/: fetch_articles.py
drug-discovery_agent/: find_executors.py  find_mcp_class.py  inspect_agent.py  pyproject.toml  test_adk.py  test_agent.py  test_hpc.py  test_hpc_manual.py  test_live.py  test_session.py
drug-discovery_agent/deployment/: deploy.py  deploy.py.bk-mcp  deploy.py.bk-working  deploy.py.bk2  deploy.py.bk3  deploy_bulletproof.py  deploy_echo.py  deploy_final.py  deploy_langchain.py  deploy_lib_test.py  deploy_monolith.py  deploy_reflector.py  deploy_safe.py  deploy_typed.py
drug-discovery_agent/drug_discovery_agent/: agent.py  prompt.py
drug-discovery_agent/drug_discovery_agent/specialists/compound_analyzer/: agent.py  prompt.py
drug-discovery_agent/drug_discovery_agent/specialists/infrastructure_specialist/: agent.py
drug-discovery_agent/drug_discovery_agent/specialists/infrastructure_specialist/tools/: hpc_tools.py
drug-discovery_agent/drug_discovery_agent/specialists/literature_researcher/: agent.py  prompt.py
drug-discovery_agent/drug_discovery_agent/specialists/literature_researcher/tools/: fetch_articles.py
medical-research/: pyproject.toml
